# neural-mpcx

./: .gitignore  .pre-commit-config.yaml  .rodare.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  codemeta.json  pyproject.toml
examples/CSTR/: neural_mpc_cstr.py  neural_mpc_cstr_disturbance.py  nmpc_cstr.py  nmpc_cstr_disturbance.py
examples/CSTR/models/: cstr-lstm-batched-128.pt  cstr-lstm-batched-16.pt  cstr-lstm-batched-32.pt  cstr-lstm-batched-64.pt  cstr-lstm-batched-8.pt
examples/Cascaded_Two_Tank_System/: lstm_training.ipynb  lstm_training.py  neural_mpc_cts.py
examples/Cascaded_Two_Tank_System/data/: dataBenchmark.csv  u_test.npy  u_train.npy  y_test.npy  y_train.npy
examples/Cascaded_Two_Tank_System/models/: cts-lstm-batched-128-repro.pt  cts-lstm-batched-128.pt  cts-lstm-batched-16.pt  cts-lstm-batched-32.pt  cts-lstm-batched-64.pt  cts-lstm-batched-8.pt
examples/Cascaded_Two_Tank_System/torch_wrapper/: __init__.py  lstm_pytorch.py
examples/Cascaded_Two_Tank_System/torchid/: metrics.py
examples/MPC_Grinding_Circuit/: README.md  mpc_grinding_circuit.py
examples/MPC_Grinding_Circuit/models/: grinding_ss_Ts30s_pade2.npz
src/neuralmpcx/: __init__.py
src/neuralmpcx/core/: __init__.py  cache.py  data.py  debug.py  solutions.py  warmstart.py
src/neuralmpcx/multistart/: __init__.py  startpoints.py
src/neuralmpcx/neural/: __init__.py  casadi_lstm.py
src/neuralmpcx/nlps/: __init__.py  constraints.py  nlp.py  objective.py  parameters.py  variables.py
src/neuralmpcx/util/: __init__.py  control.py  estimators.py  io.py  math.py
src/neuralmpcx/wrappers/: __init__.py  wrapper.py
src/neuralmpcx/wrappers/mpc/: mpc.py
